--- a/bootstarp-conceptual/css/style.css
+++ b/bootstarp-conceptual/css/style.css
@@ -16,4 +16,27 @@ body{
 
 .download{
     height: 100vh;
+    width: 100vw;
+    background-image: url(../img/background.png),
+    linear-gradient(rgba(67, 97, 121, 0.486),rgba(90, 73, 241, 0.514));;
+    background-blend-mode: overlay;
+    background-repeat: no-repeat;
+    background-size: 100vw 100vh;
+    background-position: center top;
+    background-attachment: fixed;
+    overflow: hidden;
+    outline: none;
+}
+
+.download-text{
+    width: 100vw;
+    height: 100vh;
+}
+@media only screen and (max-width: 480px ) {
+    .download{
+        height: 50vh;
+        width: 100vw;
+        background-size: 150vw 150vh;
+        object-fit: cover;
+    }
 }
